--- a/app/src/main/res/layout/item_send_room_activity.xml
+++ b/app/src/main/res/layout/item_send_room_activity.xml
@@ -2,10 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootItemView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:background="@color/colorChatBg"
-    android:id="@+id/rootItemView">
+    tools:background="@color/colorChatBg">
+
+    <View
+        android:id="@+id/paddingView"
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/dateTextView"
@@ -19,7 +27,7 @@
         app:layout_constraintBottom_toTopOf="@id/contentTextView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/paddingView"
         tools:text="01/01/2019"
         tools:visibility="visible" />
 
@@ -47,152 +55,167 @@
         android:layout_marginEnd="@dimen/size_margin_send_msg_item"
         android:layout_marginBottom="2dp"
         android:background="@drawable/recv_message_bg"
+        android:padding="0dp"
         android:visibility="gone"
         app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toTopOf="@id/fileViewLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1"
         app:layout_constraintStart_toEndOf="@id/guideline"
-        android:padding="0dp"
         tools:visibility="visible">
+
         <TextView
+            android:id="@+id/callTitleTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="10dp"
+            android:textStyle="bold"
+            app:layout_constrainedWidth="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0"
-            android:layout_marginTop="4dp"
-            app:layout_constrainedWidth="true"
-            android:layout_marginEnd="10dp"
-            android:layout_marginStart="10dp"
-            android:textStyle="bold"
-            tools:text="@string/description_incoming_voice_call"
-            app:layout_constraintTop_toTopOf="parent"
-            android:id="@+id/callTitleTV"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/description_incoming_voice_call" />
+
         <ImageView
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintEnd_toStartOf="@id/callTimeTV"
-            android:layout_marginTop="4dp"
             android:id="@+id/callIconImgView"
-            tools:src="@drawable/success_incoming_call"
             android:layout_width="15dp"
             android:layout_height="0dp"
+            android:layout_marginTop="4dp"
             app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toStartOf="@id/callTimeTV"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="@id/callTitleTV"
             app:layout_constraintTop_toBottomOf="@id/callTitleTV"
-            app:layout_constraintStart_toStartOf="@id/callTitleTV"/>
+            tools:src="@drawable/success_incoming_call" />
+
         <TextView
+            android:id="@+id/callTimeTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginEnd="10dp"
             android:textColor="@color/lightTextGray"
             android:textSize="@dimen/sizeTextSmall"
-            android:layout_marginStart="8dp"
-            tools:text="1 phút 22 giây"
-            app:layout_constraintTop_toTopOf="@id/callIconImgView"
+            app:layout_constrainedWidth="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/callIconImgView"
-            android:id="@+id/callTimeTV"
-            app:layout_constrainedWidth="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintTop_toTopOf="@id/callIconImgView"
+            tools:text="1 phút 22 giây" />
+
         <View
-            android:layout_marginTop="6dp"
             android:id="@+id/line"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_marginTop="6dp"
             android:background="@color/lightWeakGray"
-            app:layout_constraintTop_toBottomOf="@id/callTimeTV"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"/>
-        <TextView
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/callTimeTV" />
+
+        <TextView
+            android:id="@+id/callbackTV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="4dp"
+            android:text="@string/label_callback"
             android:textAllCaps="true"
             android:textColor="@color/lightPrimary"
             android:textStyle="bold"
-            android:padding="4dp"
-            android:gravity="center"
-            android:text="@string/label_callback"
-            app:layout_constraintTop_toBottomOf="@id/line"
-            android:id="@+id/callbackTV"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/line" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        app:layout_constrainedWidth="true"
-        app:layout_constraintStart_toEndOf="@id/guideline"
-        app:layout_constraintHorizontal_bias="1"
-        tools:visibility="visible"
-        android:visibility="gone"
-        android:layout_marginEnd="@dimen/size_margin_send_msg_item"
-        android:layout_marginBottom="2dp"
-        android:background="@drawable/send_message_bg"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/stickerAnimView"
         android:id="@+id/fileViewLayout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/size_margin_send_msg_item"
+        android:layout_marginBottom="2dp"
+        android:background="@drawable/send_message_bg_stroke"
+        android:visibility="gone"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintBottom_toTopOf="@id/stickerAnimView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintStart_toEndOf="@id/guideline"
+        tools:visibility="visible">
+
         <ImageView
-            app:layout_constraintDimensionRatio="1:1"
-            tools:src="@drawable/attach_file"
-            android:layout_margin="4dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/fileExtensionImgView"
             android:layout_width="0dp"
-            android:layout_height="25dp"/>
+            android:layout_height="25dp"
+            android:layout_margin="4dp"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/doc" />
+
         <TextView
-            app:layout_constrainedWidth="true"
-            android:scrollHorizontally="true"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:layout_marginEnd="8dp"
+            android:id="@+id/fileNameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:scrollHorizontally="true"
             android:textColor="@color/blackText"
-            tools:text="app-debug.apkkkkkkkkkkkkkkkk"
-            app:layout_constraintTop_toTopOf="@id/fileExtensionImgView"
+            app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toBottomOf="@id/fileExtensionImgView"
             app:layout_constraintEnd_toStartOf="@id/downloadImgView"
             app:layout_constraintStart_toEndOf="@id/fileExtensionImgView"
-            android:id="@+id/fileNameTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintTop_toTopOf="@id/fileExtensionImgView"
+            tools:text="app-debug.apkkkkkkkkkkkkkkkk" />
+
         <TextView
-            tools:visibility="visible"
-            android:visibility="gone"
-            android:textColor="@color/blackText"
+            android:textStyle="bold"
+            android:id="@+id/downloadImgView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/download_button_bg"
             android:paddingStart="8dp"
+            android:paddingTop="4dp"
             android:paddingEnd="8dp"
             android:paddingBottom="4dp"
-            android:paddingTop="4dp"
             android:text="@string/label_open"
-            android:background="@drawable/download_button_bg"
+            android:textColor="@android:color/white"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/fileNameTextView"
-            app:layout_constraintTop_toTopOf="@id/fileNameTextView"
-            android:id="@+id/downloadImgView"
             app:layout_constraintEnd_toStartOf="@id/openImgView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <ImageView
+            app:layout_constraintTop_toTopOf="@id/fileNameTextView"
+            tools:visibility="visible" />
+
+        <com.makeramen.roundedimageview.RoundedImageView
+            app:riv_oval="true"
+            app:riv_mutate_background="true"
+            android:id="@+id/openImgView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@color/lightAccent"
             android:padding="4dp"
-            app:layout_constraintDimensionRatio="1:1"
-            android:background="@drawable/download_button_bg"
             android:src="@drawable/download2"
             app:layout_constraintBottom_toBottomOf="@id/fileExtensionImgView"
-            app:layout_constraintTop_toTopOf="@id/fileExtensionImgView"
-            android:id="@+id/openImgView"
+            app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="0dp"
-            android:layout_height="0dp"/>
+            app:layout_constraintTop_toTopOf="@id/fileExtensionImgView" />
+
         <TextView
-            android:textSize="@dimen/sizeTextSmall"
-            android:layout_marginTop="4dp"
-            android:textColor="@color/lightTextGray"
-            tools:text="APK - 10,25 MB"
-            app:layout_constraintStart_toStartOf="@id/fileExtensionImgView"
-            app:layout_constraintTop_toBottomOf="@id/fileExtensionImgView"
             android:id="@+id/fileDescTextView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:textColor="@color/lightTextGray"
+            android:textSize="@dimen/sizeTextSmall"
+            app:layout_constraintStart_toStartOf="@id/fileExtensionImgView"
+            app:layout_constraintTop_toBottomOf="@id/fileNameTextView"
+            tools:text="APK - 10,25 MB" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.airbnb.lottie.LottieAnimationView
@@ -212,25 +235,24 @@
         tools:visibility="visible" />
 
     <com.makeramen.roundedimageview.RoundedImageView
-        android:layout_marginTop="16dp"
-        app:layout_constraintVertical_bias="1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="1"
         android:id="@+id/imageView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constrainedWidth="true"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="@dimen/size_margin_send_msg_item"
         android:layout_marginBottom="4dp"
+        android:background="@color/strongGray"
         android:contentDescription="@string/description_image"
+        android:scaleType="fitXY"
         android:visibility="gone"
+        app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toTopOf="@id/timeTextView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1"
         app:layout_constraintStart_toEndOf="@id/guideline"
-        tools:layout_constraintDimensionRatio="1:1"
         app:riv_corner_radius="@dimen/sizeRoundCornerMessageBg"
-        android:background="@color/strongGray"
         app:riv_mutate_background="true"
+        tools:layout_constraintDimensionRatio="1:1"
         tools:visibility="visible" />
 
     <TextView
