--- a/app/src/main/res/drawable/download_button_bg.xml
+++ b/app/src/main/res/drawable/download_button_bg.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="#60000000"/>
+            <solid android:color="@color/lightAccent"/>
             <corners android:radius="@dimen/sizeRoundCornerRadiusLayout"
                 />
 <!--            <stroke-->
