--- a/app/src/main/res/drawable/recv_message_bg_stroke.xml
+++ b/app/src/main/res/drawable/recv_message_bg_stroke.xml
@@ -5,9 +5,9 @@
             <solid android:color="@color/recvMessageBackground"/>
             <corners android:radius="@dimen/sizeRoundCornerMessageBg"
                 />
-<!--            <stroke-->
-<!--                android:width="1dp"-->
-<!--                android:color="@color/lightPrimary" />-->
+            <stroke
+                android:width="1dp"
+                android:color="@color/lightPrimary" />
             <padding android:left="10dp" android:top="4dp" android:right="10dp" android:bottom="8dp" />
         </shape>
     </item>
