--- a/app/src/main/res/drawable/send_message_bg_stroke.xml
+++ b/app/src/main/res/drawable/send_message_bg_stroke.xml
@@ -2,12 +2,12 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="@color/recvMessageBackground"/>
+            <solid android:color="@color/sendMessageBackground"/>
             <corners android:radius="@dimen/sizeRoundCornerMessageBg"
                 />
-<!--            <stroke-->
-<!--                android:width="1dp"-->
-<!--                android:color="@color/lightPrimary" />-->
+            <stroke
+                android:width="1dp"
+                android:color="@color/lightPrimary" />
             <padding android:left="10dp" android:top="4dp" android:right="10dp" android:bottom="8dp" />
         </shape>
     </item>
