--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -157,6 +157,8 @@
         android:background="@color/whiteTransparent"
         android:padding="@dimen/sizePaddingButtonCallActivity"
         android:src="@drawable/answer"
+        android:visibility="gone"
+        tools:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@id/cancelCallImgView"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toStartOf="@id/recorderImgView"
