--- a/app/src/main/res/layout/dialog_confirm.xml
+++ b/app/src/main/res/layout/dialog_confirm.xml
@@ -2,121 +2,130 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@null"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_width="match_parent">
+    android:background="@null">
+
     <androidx.cardview.widget.CardView
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        app:cardCornerRadius="@dimen/sizeRoundCornerRadiusLayout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent">
+        app:cardCornerRadius="@dimen/sizeRoundCornerRadiusLayout">
+
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:textStyle="bold"
-                android:textSize="@dimen/sizeTextBig"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:id="@+id/titleTextView"
-                android:layout_marginTop="24dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                tools:text="Title"
-                android:textAlignment="center"
-                />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxWidth="300dp"
+            android:minWidth="200dp">
 
             <TextView
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginTop="2dp"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:id="@+id/descTextView"
-                app:layout_constraintTop_toBottomOf="@id/titleTextView"
+                android:id="@+id/titleTextView"
                 android:layout_width="wrap_content"
-                app:layout_constrainedWidth="true"
                 android:layout_height="wrap_content"
-                tools:text="desc"
-                />
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="16dp"
+                android:textAlignment="center"
+                android:textSize="@dimen/sizeTextBig"
+                android:textStyle="bold"
+                app:layout_constrainedWidth="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Titldsasaddsadsasdaasdasdasdasdasdasdsadsdae" />
+
+            <TextView
+                android:id="@+id/descTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constrainedWidth="true"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/titleTextView"
+                tools:text="dessdfsdfdfsdsfdfdssfdsfdsfdsfdfsdsfdsfdsfdsfdc" />
 
             <View
-                android:layout_marginTop="24dp"
                 android:id="@+id/horizontalLine"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_marginTop="24dp"
                 android:background="@color/lightWeakGray"
-                app:layout_constraintTop_toBottomOf="@id/descTextView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_width="0dp"
-                android:layout_height="1dp"/>
+                app:layout_constraintTop_toBottomOf="@id/descTextView" />
+
             <TextView
-                android:background="?attr/selectableItemBackground"
-                android:textSize="@dimen/sizeTextBig"
-                android:textAlignment="center"
-                android:padding="12dp"
                 android:id="@+id/buttonTextView1"
-                android:textColor="@color/lightPrimary"
-                app:layout_constraintTop_toBottomOf="@id/horizontalLine"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/button2Layout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
+                android:padding="12dp"
                 android:text="@string/label_ok"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"/>
+                android:textAlignment="center"
+                android:textColor="@color/lightPrimary"
+                android:textSize="@dimen/sizeTextBig"
+                app:layout_constraintEnd_toStartOf="@id/button2Layout"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/horizontalLine" />
+
             <LinearLayout
-                android:visibility="gone"
-                tools:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="@id/buttonTextView1"
-                app:layout_constraintTop_toTopOf="@id/buttonTextView1"
-                app:layout_constraintStart_toEndOf="@id/buttonTextView1"
-                app:layout_constraintEnd_toStartOf="@id/button3Layout"
                 android:id="@+id/button2Layout"
-                android:orientation="horizontal"
                 android:layout_width="0dp"
-                android:layout_height="0dp">
-                <View
-                    android:background="@color/lightWeakGray"
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"/>
-                <TextView
-                    android:background="?attr/selectableItemBackground"
-                    android:textSize="@dimen/sizeTextBig"
-                    android:gravity="center"
-                    android:id="@+id/buttonTextView2"
-                    android:textColor="@color/lightPrimary"
-                    tools:text="@string/label_ok"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="match_parent"/>
-            </LinearLayout>
-            <LinearLayout
+                android:layout_height="0dp"
+                android:orientation="horizontal"
                 android:visibility="gone"
-                tools:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="@id/buttonTextView1"
+                app:layout_constraintEnd_toStartOf="@id/button3Layout"
+                app:layout_constraintStart_toEndOf="@id/buttonTextView1"
                 app:layout_constraintTop_toTopOf="@id/buttonTextView1"
-                app:layout_constraintStart_toEndOf="@id/button2Layout"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:id="@+id/button3Layout"
-                android:orientation="horizontal"
-                android:layout_width="0dp"
-                android:layout_height="0dp">
+                tools:visibility="visible">
+
                 <View
-                    android:background="@color/lightWeakGray"
                     android:layout_width="1dp"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="match_parent"
+                    android:background="@color/lightWeakGray" />
+
                 <TextView
-                    android:background="?attr/selectableItemBackground"
-                    android:textSize="@dimen/sizeTextBig"
-                    android:gravity="center"
-                    android:id="@+id/buttonTextView3"
-                    android:textColor="@color/lightPrimary"
-                    tools:text="@string/label_ok"
+                    android:id="@+id/buttonTextView2"
                     android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:layout_height="match_parent"/>
+                    android:background="?attr/selectableItemBackground"
+                    android:gravity="center"
+                    android:textColor="@color/lightPrimary"
+                    android:textSize="@dimen/sizeTextBig"
+                    tools:text="@string/label_ok" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/button3Layout"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:orientation="horizontal"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@id/buttonTextView1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/button2Layout"
+                app:layout_constraintTop_toTopOf="@id/buttonTextView1"
+                tools:visibility="visible">
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/lightWeakGray" />
+
+                <TextView
+                    android:id="@+id/buttonTextView3"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="?attr/selectableItemBackground"
+                    android:gravity="center"
+                    android:textColor="@color/lightPrimary"
+                    android:textSize="@dimen/sizeTextBig"
+                    tools:text="@string/label_ok" />
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
